--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,25 @@
 appdirs==1.4.4
 asgiref==3.3.4
+certifi==2021.10.8
+charset-normalizer==2.0.7
 distlib==0.3.2
+dj-database-url==0.5.0
 Django==3.2.4
+django-heroku==0.3.1
 filelock==3.0.12
 gunicorn==20.1.0
+heroku==0.1.4
+idna==3.3
 Pillow==8.2.0
+psycopg2==2.9.1
 psycopg2-binary==2.9.1
+python-dateutil==1.5
+python-decouple==3.5
 pytz==2021.1
+requests==2.26.0
 six==1.16.0
 sqlparse==0.4.1
+urllib3==1.26.7
 virtualenv==20.4.7
 virtualenvwrapper-win==1.2.6
 whitenoise==5.3.0
-django-heroku==21.1.1
